[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "bencher"
version = "0.0.1"
description = "Benchmarks for stack-queue"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/stack-queue/"
publish = false

[dependencies]
async_t = "0.7"
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
crossbeam-deque = "0.8"
flume = "0.10"
futures = "0.3"
stack-queue = { path = "../stack-queue", features = ["barrier-protected-runtime"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
jemallocator = "0.5.0"

[lib]
test = false
doctest = false
bench = false

[[bench]]
name = "benchmarks"
path = "src/bench.rs"
harness = false
doc = false
