[package]
name = "derive-stack-queue"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "0.0.1-beta.9"
description = "Derives for stack-queue"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/stack-queue/"

[lib]
test = false
doctest = false
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [] }
