[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "stack-queue"
version = "0.14.5"
description = "Heapless auto-batching queue"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/stack-queue/"
rust-version = "1.75"

[dependencies]
async-local = { version = "2.0", features = ["tokio-runtime"] }
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
derive-stack-queue = { version = "0.14.0", path = "../derive-stack-queue" }
diesel = { version = ">=1.0.0, <2.2.0", optional = true }
generativity = "1.1"
parking_lot_core = "0.9"
pin-project = "1"
redis = { version = "0.25", optional = true }
static_assertions = "1.1.0"
tokio = { version = "1", features = ["net", "rt", "sync"] }

[dev-dependencies]
async-local = { version = "2.0", features = ["barrier-protected-runtime"] }
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(loom)'.dependencies]
futures-test = "0.3"
loom = { version = "0.7", features = ["futures"] }

[lib]
doctest = false
bench = false

[features]
default = []

# Tokio Runtime configured with a barrier-synchronized shutdown as to ensure tasks never outlive worker thread owned local data
barrier-protected-runtime = ["async-local/barrier-protected-runtime"]

# Implement `diesel::associations::BelongsTo` for `stack_queue::task::TaskRef`
diesel-associations = ["diesel"]

# Implement `redis::ToRedisArgs` for `stack_queue::task::TaskRef`
redis-args = ["redis"]

[package.metadata.docs.rs]
features = ["diesel-associations", "redis-args"]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
